# ips-parallel-project

./: CMakeLists.txt  Readme.md
dependencies/SDL2-2.0.1/: CMakeLists.txt
dependencies/SDL2-2.0.1/cmake/: sdlchecks.cmake
dependencies/glew-1.10.0/: CMakeLists.txt
dependencies/libpng-1.6.7/: CMakeLists.txt
dependencies/pthreads-win32-2.9.1/: CMakeLists.txt
dependencies/zlib-1.2.8/: CMakeLists.txt
ips/: CMakeLists.txt  ips.c  ips_shader.glsl.fs  ips_shader.glsl.vs  ips_utils.c  ips_utils.h
